Fractory - début test inté

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,7 @@
 @import "variables";
 
+// Lib - Fontawesome
 @import 'lib/fontawesome';
 
-/*
- * Choisissez un framework CSS ci-dessous
- */
-
-// @import 'lib/foundation-sites';
-// @import 'lib/tailwindcss';
-// @import 'lib/bootstrap';
-
+// Lib - Bootstrap
+@import 'lib/bootstrap';
