Fractory.io - Test terminé

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,15 @@ $fa-font-path: "../fonts";
 $font-family-sans-serif: "Rubik", sans-serif;
 $font-family-monospace:  "Roboto Mono", monospace;
 
+$font-weight-black: 900;
+
 $yellow: #F9BC41;
 $dark:   #1B1D21;
 $darker: #121212;
+
+// Couleur dark mode
+$blue: #417EF9;
+$green: #211F1B;
+$green-600: #7D746C;
+$green-700: #575049;
+$green-900: #292521;
